--- a/src/styles/search.sass
+++ b/src/styles/search.sass
@@ -9,3 +9,8 @@
         font-size: 50px
         margin-top: 30px
         color: variables.$text-color-primary
+    .error-icon
+        width: 150px
+        align-self: center
+        margin-top: 30px
+        opacity: 0.6
