--- a/src/styles/Components/containerCharacters.sass
+++ b/src/styles/Components/containerCharacters.sass
@@ -10,3 +10,7 @@
     gap: 30px
     flex-wrap: wrap
     padding: 30px
+
+@media (max-width: 1000px)
+    .container-characters
+        padding: 20px 0
