--- a/src/styles/Components/navbar.sass
+++ b/src/styles/Components/navbar.sass
@@ -1,4 +1,27 @@
 @use 'variables'
+
+@keyframes openMenu
+    from
+        transform: translateX(60%)
+    to
+        transform: translateX(0%)
+
+@keyframes closeMenu
+    from
+        transform: translateX(0%)
+        
+    to
+        transform: translateX(60%)
+
+*
+  margin: 0
+  padding: 0
+  box-sizing: border-box
+
+.no-scroll
+    height: 100vh
+    overflow: hidden
+
 .container-navbar
     width: 100%
     height: 10vh
@@ -7,32 +30,120 @@
     justify-content: space-between
     align-items: center
     padding: 0 50px
+    border-bottom: 1px solid gray
+    position: relative
+    z-index: 50
+
+    h1
+        display: flex
+        align-items: center
+
     a
         color: variables.$text-color-primary
+        font-size: 20px
+
+    .background-menu
+        width: 100vw
+        height: 100vh
+        background-color: rgba(0, 0, 0, 0.5)
+        top: 0
+        left: 0
+        position: fixed
+
+        .menu
+            background-color: variables.$background-color-primary
+            width: 50%
+            height: 100vh
+            position: fixed
+            right: 0
+            padding-top: 20%
+            z-index: 100
+            
+            &.menu-open
+                animation: openMenu 0.5s forwards
+            
+            &.menu-close
+                animation: closeMenu 0.5s forwards
+
+            .options-menu
+                width: 100%
+                height: auto
+                display: flex
+                flex-direction: column
+                align-items: center
+                gap: 20px
+                
+                p
+                    color: #fff
+
     form
-        width: 60%
+        width: 50%
         height: 90%
         display: flex
         align-items: center
-        justify-content: center
-        gap: 20px
+        justify-content: space-evenly
+
         input
             width: 70%
             height: 60%
             padding-left: 15px
             border: none
             border-radius: 5px
+
         input:focus
             box-shadow: 0 0 0 0
             border: 0 none
-            outline: 0
-        button
-            width: 100px
-            height: 60%
-            border: none
-            border-radius: 5px
-            cursor: pointer
-            color: variables.$text-color-primary
-            background-color: variables.$button-color-primary
-        button:hover
-            background-color: variables.$button-color-secondary
+            outline: 0    
+
+@media (max-width: 1000px)
+    a
+        font-size: 15px !important
+    
+    .search-menu
+        width: 100vw
+        height: 100vh
+        background-color: rgba(0, 0, 0, 0.9)
+        position: absolute
+        top: 0
+        left: 0
+        display: flex
+        align-items: start
+        justify-content: center
+        padding-top: 50px
+
+        form
+            min-width: 100vw
+            min-height: min-content
+            display: flex
+            flex-direction: column
+            justify-content: start
+            align-items: center
+            gap: 10px
+
+            .input-and-close
+                width: 100%
+                height: auto
+                display: flex
+                flex-direction: row
+                align-items: center
+                justify-content: center
+                gap: 2%
+
+                input
+                    width: 68%
+                    height: 45px
+                    padding-left: 10px
+                    border: none
+                    border-radius: 5px
+
+                #close-icon
+                    color: #fff
+                    width: 20%
+                    height: 45px
+                    background-color: variables.$background-color-card
+                    border-radius: 5px
+                    font-size: 10px
+
+@media (min-width: 1000px)
+    #menu-icon
+        display: none
