--- a/src/styles/Components/variables.sass
+++ b/src/styles/Components/variables.sass
@@ -1,5 +1,5 @@
 $background-color-primary: #161616
 $background-color-card: #282828
-$text-color-primary: #FFFFFF
+$text-color-primary: #fff
 $button-color-primary: #10ce1a
 $button-color-secondary: #00ff0d
